<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/end"
    tools:context="com.example.hasee.cloudnote.LoginActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="18sp"
        android:textColor="#3F51B5"
        android:id="@+id/login_tv"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal|center_vertical"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_username"
        android:id="@+id/username_et"
        android:layout_below="@+id/login_tv" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_password"
        android:inputType="textPassword"
        android:id="@+id/password_et"
        android:layout_below="@+id/username_et"
        android:layout_alignParentStart="true" />
    <Button
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:text="@string/login_bt"
        android:id="@+id/login_bt"
        android:layout_below="@id/password_et"
        android:layout_alignLeft="@id/password_et"
        android:background="@drawable/f6"/>
    <Button
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:text="@string/register_bt"
        android:id="@+id/register_bt"
        android:background="@drawable/f6"
        android:layout_below="@id/password_et"
        android:layout_alignRight="@id/password_et"/>




</RelativeLayout>
