<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/a"
    tools:context="com.example.hasee.cloudnote.RegisterActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="18sp"
        android:textColor="#333333"
        android:id="@+id/register_tv"
        android:layout_centerHorizontal="true"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_username"
        android:id="@+id/username_et"
        android:layout_below="@id/register_tv"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_password"
        android:inputType="textPassword"
        android:id="@+id/password_et"
        android:layout_below="@id/username_et"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reinput_password"
        android:inputType="textPassword"
        android:id="@+id/repassword_et"
        android:layout_below="@id/password_et"/>

    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text=""
        android:id="@+id/register_bt"
        android:background="@drawable/one1"
        android:layout_below="@+id/repassword_et"
        android:layout_alignStart="@+id/register_tv" />
</RelativeLayout>
